[gd_scene load_steps=3 format=2]

[ext_resource path="res://CardDeck.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameManager.gd" type="Script" id=2]

[node name="GameManager" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CardDeck" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="FlipTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MatchTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="FlipTimer" to="." method="_on_FlipTimer_timeout"]
[connection signal="timeout" from="MatchTimer" to="." method="_on_MatchTimer_timeout"]

[editable path="CanvasLayer/CardDeck"]
